manifests/radicale/manifest.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radicale
  namespace: tools
  labels:
    app: radicale
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radicale
  template:
    metadata:
      labels:
        app: radicale
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: radicale
          image: "ghcr.io/theautomation/radicale:dccab9526d5ba935cc7cc59be87614a82854abc4"
          resources: {}
          command: ["/bin/sh", "/usr/local/bin/docker-entrypoint.sh"]
          args: ["radicale", "--config", "/config/config"]
          securityContext:
            allowPrivilegeEscalation: false
            runAsUser: 1000
            runAsGroup: 1000
          ports:
            - containerPort: 5232
              protocol: TCP
          volumeMounts:
            - name: collections
              mountPath: /data/collections
            - name: config
              mountPath: /config/config
              subPath: config
              readOnly: true
            - name: users
              mountPath: /etc/radicale/users
              subPath: users
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: radicale-config
        - name: users
          secret:
            secretName: radicale-users
        - name: collections
          persistentVolumeClaim:
            claimName: pvc-nfs-radicale-data
      imagePullSecrets:
        - name: github-registry-creds

---
kind: Service
apiVersion: v1
metadata:
  name: radicale
  namespace: tools
  labels:
    app: radicale
spec:
  selector:
    app: radicale
  type: ClusterIP
  ports:
    - name: dav
      protocol: TCP
      targetPort: 5232
      port: 5232

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: radicale
  namespace: tools
  labels:
    app: radicale
spec:
  ingressClassName: nginx-public
  rules:
    - host: radicale.theautomation.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radicale
                port:
                  number: 5232
  tls:
    - hosts:
        - radicale.theautomation.nl
      secretName: tls-wildcard-theautomation-nl
